# SR-Token-Ring

./: .gitignore  CMakeLists.txt  ip4.cpp  ip4.h  logger.cpp  logger.h  main.cpp  programarguments.cpp  programarguments.h  protocol.h  quitstatusobserver.cpp  quitstatusobserver.h  serializable.h  socket.cpp  socket.h  sr_logger.py  tokenringdispatcher.cpp  tokenringdispatcher.h  tokenringpacket.cpp  tokenringpacket.h  tokenringudpservice.cpp  tokenringudpservice.h  utility.cpp  utility.h
